[gd_scene load_steps=16 format=3 uid="uid://bggwj8tr3hcph"]

[ext_resource type="Script" path="res://Scripts/client_card_crafter.gd" id="1_lgqnu"]
[ext_resource type="Texture2D" uid="uid://d127pfpldgh1l" path="res://Assets/generatordesign.png" id="2_58m7y"]
[ext_resource type="PackedScene" uid="uid://b41yu27wmglap" path="res://Scenes/icon_button.tscn" id="3_kfv0r"]
[ext_resource type="PackedScene" uid="uid://c7j6lwbwgbosr" path="res://Scenes/client_card.tscn" id="4_3c34i"]
[ext_resource type="Texture2D" uid="uid://de0gq6h0onwex" path="res://Assets/slice.png" id="5_wfdti"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_p5rfg"]
load_path = "res://.godot/imported/icons.png-09c24313aa75a5df81de880395d42450.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_4fx3s"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thch8"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_um33r"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bvig"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t81qe"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_703sl"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyh1f"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkprq"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02lrn"]
atlas = SubResource("CompressedTexture2D_p5rfg")
region = Rect2(288, 0, 32, 32)

[node name="Card Crafter" type="Node2D" node_paths=PackedStringArray("symbol_buttons", "symbol_count_labels")]
script = ExtResource("1_lgqnu")
symbol_buttons = [NodePath("crossbutton"), NodePath("squarebutton"), NodePath("trianglebutton"), NodePath("crescentbutton"), NodePath("puppybutton"), NodePath("riverbutton"), NodePath("starbutton"), NodePath("chainbutton"), NodePath("gustbutton")]
symbol_count_labels = [NodePath("crosscount"), NodePath("squarecount"), NodePath("trianglecount"), NodePath("crescentcount"), NodePath("puppycount"), NodePath("rivercount"), NodePath("starcount"), NodePath("chaincount"), NodePath("gustcount")]

[node name="main_camera" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)

[node name="background_image" type="Sprite2D" parent="."]
texture = ExtResource("2_58m7y")

[node name="generate" type="Button" parent="."]
offset_left = -902.0
offset_top = -367.0
offset_right = -527.0
offset_bottom = -292.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "generate"

[node name="new" type="Button" parent="."]
offset_left = -902.0
offset_top = -524.0
offset_right = -527.0
offset_bottom = -449.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "new"

[node name="new2" type="Button" parent="."]
offset_left = 652.0
offset_top = -526.0
offset_right = 941.0
offset_bottom = -471.0
theme_override_font_sizes/font_size = 28
action_mode = 0
text = "Return to Main Menu"

[node name="load" type="Button" parent="."]
offset_left = -711.0
offset_top = -446.0
offset_right = -527.0
offset_bottom = -371.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "load"

[node name="save" type="Button" parent="."]
offset_left = -902.0
offset_top = -446.0
offset_right = -714.0
offset_bottom = -371.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "save"

[node name="edit" type="Button" parent="."]
offset_left = -902.0
offset_top = 335.0
offset_right = -523.0
offset_bottom = 410.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "edit"

[node name="delete" type="Button" parent="."]
offset_left = -902.0
offset_top = 414.0
offset_right = -523.0
offset_bottom = 489.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "delete"

[node name="prev" type="Button" parent="."]
offset_left = -902.0
offset_top = 255.0
offset_right = -715.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "prev"

[node name="next" type="Button" parent="."]
offset_left = -711.0
offset_top = 255.0
offset_right = -523.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 34
action_mode = 0
text = "next"

[node name="crossbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = -190.0
offset_top = -380.0
offset_right = -27.0
offset_bottom = -208.0

[node name="squarebutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = 14.0
offset_top = -384.0
offset_right = 178.0
offset_bottom = -207.0

[node name="trianglebutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = -346.0
offset_top = -254.0
offset_right = -185.0
offset_bottom = -75.0

[node name="crescentbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = 173.0
offset_top = -248.0
offset_right = 338.0
offset_bottom = -76.0

[node name="puppybutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = -385.0
offset_top = -52.0
offset_right = -220.0
offset_bottom = 127.0

[node name="riverbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = 211.0
offset_top = -49.0
offset_right = 375.0
offset_bottom = 128.0

[node name="starbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = -280.0
offset_top = 126.0
offset_right = -117.0
offset_bottom = 307.0

[node name="chainbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = 104.0
offset_top = 133.0
offset_right = 270.0
offset_bottom = 310.0

[node name="gustbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = -84.0
offset_top = 196.0
offset_right = 79.0
offset_bottom = 374.0

[node name="eightbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = 421.0
offset_top = -480.0
offset_right = 584.0
offset_bottom = -302.0

[node name="tenbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = 789.0
offset_top = -480.0
offset_right = 952.0
offset_bottom = -302.0

[node name="twelvebutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = 426.0
offset_top = 257.0
offset_right = 589.0
offset_bottom = 435.0

[node name="fourteenbutton" parent="." instance=ExtResource("3_kfv0r")]
offset_left = 789.0
offset_top = 255.0
offset_right = 952.0
offset_bottom = 433.0

[node name="crosscount" type="LineEdit" parent="."]
offset_left = -259.0
offset_top = -443.0
offset_right = -75.0
offset_bottom = -368.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="squarecount" type="LineEdit" parent="."]
offset_left = 73.0
offset_top = -443.0
offset_right = 257.0
offset_bottom = -368.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="crescentcount" type="LineEdit" parent="."]
offset_left = 264.0
offset_top = -285.0
offset_right = 448.0
offset_bottom = -210.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="rivercount" type="LineEdit" parent="."]
offset_left = 337.0
offset_top = 38.0
offset_right = 521.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="chaincount" type="LineEdit" parent="."]
offset_left = 202.0
offset_top = 280.0
offset_right = 386.0
offset_bottom = 355.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="gustcount" type="LineEdit" parent="."]
offset_left = -90.0
offset_top = 395.0
offset_right = 94.0
offset_bottom = 470.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="starcount" type="LineEdit" parent="."]
offset_left = -386.0
offset_top = 282.0
offset_right = -202.0
offset_bottom = 357.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="puppycount" type="LineEdit" parent="."]
offset_left = -519.0
offset_top = 40.0
offset_right = -335.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="trianglecount" type="LineEdit" parent="."]
offset_left = -447.0
offset_top = -284.0
offset_right = -263.0
offset_bottom = -209.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="easycount" type="LineEdit" parent="."]
offset_left = 692.0
offset_top = -265.0
offset_right = 876.0
offset_bottom = -190.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="mediumcount" type="LineEdit" parent="."]
offset_left = 692.0
offset_top = -124.0
offset_right = 876.0
offset_bottom = -49.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="hardcount" type="LineEdit" parent="."]
offset_left = 690.0
offset_top = 14.0
offset_right = 874.0
offset_bottom = 89.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "0"
alignment = 1
max_length = 2
flat = true

[node name="Control" type="ReferenceRect" parent="."]
offset_left = -39.0
offset_top = -47.0
offset_right = 1.0
offset_bottom = -7.0

[node name="Card" parent="Control" instance=ExtResource("4_3c34i")]
position = Vector2(-180, -121)
scale = Vector2(1.25, 1.25)

[node name="ItemList" type="OptionButton" parent="Control"]
layout_mode = 2
offset_left = -31.0
offset_top = -33.0
offset_right = 112.0
offset_bottom = 28.0
item_count = 10
popup/item_0/text = "none"
popup/item_0/id = 0
popup/item_1/text = "cross"
popup/item_1/icon = SubResource("AtlasTexture_4fx3s")
popup/item_1/id = 1
popup/item_2/text = "square"
popup/item_2/icon = SubResource("AtlasTexture_thch8")
popup/item_2/id = 2
popup/item_3/text = "triangle"
popup/item_3/icon = SubResource("AtlasTexture_um33r")
popup/item_3/id = 3
popup/item_4/text = "crescent"
popup/item_4/icon = SubResource("AtlasTexture_1bvig")
popup/item_4/id = 4
popup/item_5/text = "puppy"
popup/item_5/icon = SubResource("AtlasTexture_t81qe")
popup/item_5/id = 5
popup/item_6/text = "river"
popup/item_6/icon = SubResource("AtlasTexture_703sl")
popup/item_6/id = 6
popup/item_7/text = "star"
popup/item_7/icon = SubResource("AtlasTexture_cyh1f")
popup/item_7/id = 7
popup/item_8/text = "chain"
popup/item_8/icon = SubResource("AtlasTexture_kkprq")
popup/item_8/id = 8
popup/item_9/text = "gust"
popup/item_9/icon = SubResource("AtlasTexture_02lrn")
popup/item_9/id = 9

[node name="ItemList2" type="OptionButton" parent="Control"]
layout_mode = 2
offset_left = 116.0
offset_top = -33.0
offset_right = 259.0
offset_bottom = 28.0
item_count = 10
popup/item_0/text = "none"
popup/item_0/id = 0
popup/item_1/text = "cross"
popup/item_1/icon = SubResource("AtlasTexture_4fx3s")
popup/item_1/id = 1
popup/item_2/text = "square"
popup/item_2/icon = SubResource("AtlasTexture_thch8")
popup/item_2/id = 2
popup/item_3/text = "triangle"
popup/item_3/icon = SubResource("AtlasTexture_um33r")
popup/item_3/id = 3
popup/item_4/text = "crescent"
popup/item_4/icon = SubResource("AtlasTexture_1bvig")
popup/item_4/id = 4
popup/item_5/text = "puppy"
popup/item_5/icon = SubResource("AtlasTexture_t81qe")
popup/item_5/id = 5
popup/item_6/text = "river"
popup/item_6/icon = SubResource("AtlasTexture_703sl")
popup/item_6/id = 6
popup/item_7/text = "star"
popup/item_7/icon = SubResource("AtlasTexture_cyh1f")
popup/item_7/id = 7
popup/item_8/text = "chain"
popup/item_8/icon = SubResource("AtlasTexture_kkprq")
popup/item_8/id = 8
popup/item_9/text = "gust"
popup/item_9/icon = SubResource("AtlasTexture_02lrn")
popup/item_9/id = 9

[node name="ItemList3" type="OptionButton" parent="Control"]
layout_mode = 2
offset_left = -31.0
offset_top = 36.0
offset_right = 112.0
offset_bottom = 97.0
item_count = 10
popup/item_0/text = "none"
popup/item_0/id = 0
popup/item_1/text = "cross"
popup/item_1/icon = SubResource("AtlasTexture_4fx3s")
popup/item_1/id = 1
popup/item_2/text = "square"
popup/item_2/icon = SubResource("AtlasTexture_thch8")
popup/item_2/id = 2
popup/item_3/text = "triangle"
popup/item_3/icon = SubResource("AtlasTexture_um33r")
popup/item_3/id = 3
popup/item_4/text = "crescent"
popup/item_4/icon = SubResource("AtlasTexture_1bvig")
popup/item_4/id = 4
popup/item_5/text = "puppy"
popup/item_5/icon = SubResource("AtlasTexture_t81qe")
popup/item_5/id = 5
popup/item_6/text = "river"
popup/item_6/icon = SubResource("AtlasTexture_703sl")
popup/item_6/id = 6
popup/item_7/text = "star"
popup/item_7/icon = SubResource("AtlasTexture_cyh1f")
popup/item_7/id = 7
popup/item_8/text = "chain"
popup/item_8/icon = SubResource("AtlasTexture_kkprq")
popup/item_8/id = 8
popup/item_9/text = "gust"
popup/item_9/icon = SubResource("AtlasTexture_02lrn")
popup/item_9/id = 9

[node name="ItemList4" type="OptionButton" parent="Control"]
layout_mode = 2
offset_left = 116.0
offset_top = 36.0
offset_right = 259.0
offset_bottom = 97.0
item_count = 10
popup/item_0/text = "none"
popup/item_0/id = 0
popup/item_1/text = "cross"
popup/item_1/icon = SubResource("AtlasTexture_4fx3s")
popup/item_1/id = 1
popup/item_2/text = "square"
popup/item_2/icon = SubResource("AtlasTexture_thch8")
popup/item_2/id = 2
popup/item_3/text = "triangle"
popup/item_3/icon = SubResource("AtlasTexture_um33r")
popup/item_3/id = 3
popup/item_4/text = "crescent"
popup/item_4/icon = SubResource("AtlasTexture_1bvig")
popup/item_4/id = 4
popup/item_5/text = "puppy"
popup/item_5/icon = SubResource("AtlasTexture_t81qe")
popup/item_5/id = 5
popup/item_6/text = "river"
popup/item_6/icon = SubResource("AtlasTexture_703sl")
popup/item_6/id = 6
popup/item_7/text = "star"
popup/item_7/icon = SubResource("AtlasTexture_cyh1f")
popup/item_7/id = 7
popup/item_8/text = "chain"
popup/item_8/icon = SubResource("AtlasTexture_kkprq")
popup/item_8/id = 8
popup/item_9/text = "gust"
popup/item_9/icon = SubResource("AtlasTexture_02lrn")
popup/item_9/id = 9

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 29.0
offset_top = -107.0
offset_right = 188.0
offset_bottom = -65.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.537255)
theme_override_font_sizes/font_size = 24
text = "Task 1"
placeholder_text = "Task name"
alignment = 1
flat = true

[node name="LineEdit2" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = -53.0
offset_top = -109.0
offset_right = 43.0
offset_bottom = -67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.537255)
theme_override_font_sizes/font_size = 24
placeholder_text = "99"
alignment = 1
flat = true

[node name="TextureButton2" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 216.5
offset_top = -86.4999
offset_right = 234.5
offset_bottom = -68.4999
scale = Vector2(1.25, 1.25)
toggle_mode = true
button_pressed = true
texture_pressed = ExtResource("5_wfdti")
flip_v = true

[node name="TextureButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 216.5
offset_top = -82.4999
offset_right = 234.5
offset_bottom = -64.4999
rotation = -1.57079
scale = Vector2(1.25, 1.25)
toggle_mode = true
button_pressed = true
texture_pressed = ExtResource("5_wfdti")
flip_v = true

[node name="TextureButton4" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 220.5
offset_top = -82.4999
offset_right = 238.5
offset_bottom = -64.4999
rotation = -3.14159
scale = Vector2(1.25, 1.25)
toggle_mode = true
button_pressed = true
texture_pressed = ExtResource("5_wfdti")
flip_v = true

[node name="TextureButton3" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 220.5
offset_top = -86.4998
offset_right = 238.5
offset_bottom = -68.4998
rotation = -4.71238
scale = Vector2(1.25, 1.25)
toggle_mode = true
button_pressed = true
texture_pressed = ExtResource("5_wfdti")
flip_v = true

[node name="card_count" type="Label" parent="."]
offset_left = -739.0
offset_top = 229.0
offset_right = -687.0
offset_bottom = 255.0
text = "24/100"

[connection signal="button_down" from="generate" to="." method="generate_card_from_buttons"]
[connection signal="button_down" from="new" to="." method="new_deck"]
[connection signal="button_up" from="new2" to="." method="_on_new_2_button_up"]
[connection signal="button_down" from="load" to="." method="load_deck"]
[connection signal="button_down" from="save" to="." method="save_deck"]
[connection signal="button_down" from="edit" to="." method="edit_card"]
[connection signal="button_down" from="delete" to="." method="delete_card"]
[connection signal="button_down" from="prev" to="." method="select_prev"]
[connection signal="button_down" from="next" to="." method="select_next"]
